<resources>
    <string name="app_name">Loomo Socket Server</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="ip_label">My IP:</string>
    <string name="ip_placeholder">Detecting…</string>
    <string name="ip_cli_lbl">Client IP:</string>
    <string name="ip_cli_Placeholder">Not Connected</string>

    <string name="socket_title">Socket Communication Log</string>
    <string name="socket_placeholder">Awaiting remote connection…</string>

    <string name="no_wifi">Turn on Wifi and restart</string>
    <string name="lost_client_msg">Client lost connection</string>
    <string name="tcp_reconnect_message">Disconnected from client, awaiting new connection</string>



    <string name="speaker_connected">the speaker service is connected\n</string>
    <string name="speaker_disconnected">speaker service disconnected\n</string>

    <string name="speech_start">speech started</string>
    <string name="speech_end">speech end</string>
    <string name="speech_error">speech error:</string>


</resources>
