<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0099cc"
        tools:context=".FullscreenActivity">
    <TextView
            android:text="@string/socket_placeholder"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:id="@+id/txtSocketLogg" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtSocketTitle"
            android:scrollbars="vertical" android:textSize="12sp" android:focusable="auto"
            android:scrollbarStyle="insideOverlay"
            android:verticalScrollbarPosition="right" android:scrollHorizontally="false"
            android:scrollbarAlwaysDrawVerticalTrack="true" android:gravity="bottom"/>
    <TextView
            android:text="@string/socket_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:id="@+id/txtSocketTitle"
            app:layout_constraintStart_toStartOf="@+id/txtSocketLogg" android:fontFamily="sans-serif-condensed-medium"
            android:textSize="10sp" android:textColor="@color/colorPrimary"/>
    <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="288dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/txtSocketLogg"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:id="@+id/txtAppTitle"
            app:layout_constraintEnd_toStartOf="@+id/divider" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAlignment="center" android:textStyle="bold" android:fontFamily="sans-serif-condensed-medium"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/divider"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAppTitle"/>
    <TextView
            android:text="@string/ip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtIpLabel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" android:textSize="12sp"
            android:fontFamily="sans-serif-condensed-medium"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/txtIpPrint"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtIpLabel" android:textSize="12sp"
            android:hint="@string/ip_placeholder" android:focusable="false" android:cursorVisible="false"
            android:layout_marginStart="65dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/txtCliIPPrint"
            android:textSize="12sp"
            android:focusable="false" android:cursorVisible="false"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/txtIpPrint"
            app:layout_constraintStart_toStartOf="@+id/txtIpPrint" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/divider" android:hint="@string/ip_cli_Placeholder"/>
    <TextView
            android:text="@string/ip_cli_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCliIP" app:layout_constraintBaseline_toBaselineOf="@+id/txtCliIPPrint"
            app:layout_constraintEnd_toStartOf="@+id/txtCliIPPrint" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="12sp"
            android:fontFamily="sans-serif-condensed-medium"/>
</androidx.constraintlayout.widget.ConstraintLayout>