<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#FFFFFF">

    <ScrollView
            android:layout_width="280dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/scrollView2"
            android:verticalScrollbarPosition="right"
            android:background="@android:drawable/gallery_thumb"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/socket_placeholder"
                    android:id="@+id/txtSocketLogg"
                    android:textSize="12sp"
                    android:focusable="auto"
                    android:gravity="bottom"/>
        </LinearLayout>

    </ScrollView>

    <TextView
            android:text="@string/ip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtIp"
            android:textSize="12sp"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintTop_toBottomOf="@+id/txtIpDisplay"
            app:layout_constraintStart_toStartOf="@+id/txtIpDisplay"
            app:layout_constraintEnd_toEndOf="@+id/txtIpDisplay"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/txtIpDisplay"
            android:textSize="12sp"
            android:hint="@string/ip_placeholder"
            android:focusable="false"
            android:cursorVisible="false"
            tools:ignore="Autofill"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/connectionImageView"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/txtClientIpDisplay"
            android:textSize="12sp"
            android:focusable="false"
            android:cursorVisible="false"
            android:hint="@string/ip_cli_Placeholder"
            tools:ignore="Autofill"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/connectionImageView"
            android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/ip_cli_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtClientIp"
            android:textSize="12sp"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintTop_toBottomOf="@+id/txtClientIpDisplay"
            app:layout_constraintStart_toStartOf="@+id/txtClientIpDisplay"
            app:layout_constraintEnd_toEndOf="@+id/txtClientIpDisplay"
            />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="31dp"
            app:srcCompat="@drawable/ic_connection_off"
            android:id="@+id/connectionImageView"
            app:layout_constraintTop_toTopOf="@+id/txtIpDisplay"
            app:layout_constraintBottom_toBottomOf="@+id/txtIpDisplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="501dp"
            android:layout_height="123dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtIp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:id="@+id/linearLayout"
            >
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="170dp"
                    android:layout_height="110dp"
                    tools:srcCompat="@tools:sample/avatars[0]"
                    android:id="@+id/viewFinderDepth"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                tools:ignore="UseCompoundDrawables"
                android:background="@android:drawable/gallery_thumb">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_drive_off"
                    android:id="@+id/driveImageView"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:text="@string/drive_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driveTextView"
                    style="@style/icon_name_style"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                style="@style/statusIconStyle"
                tools:ignore="UseCompoundDrawables"
                android:background="@android:drawable/gallery_thumb">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_camera_off"
                    android:id="@+id/visionImageView"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:text="@string/camera_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/visionTextView"
                    style="@style/icon_name_style"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="170dp"
                    android:layout_height="110dp"
                    tools:srcCompat="@tools:sample/avatars[0]"
                    android:id="@+id/viewFinder"
                    android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/ic_uiafaceng"
            android:id="@+id/logoImageView"
            app:layout_constraintEnd_toStartOf="@+id/scrollView2"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="ContentDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>